--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGO = mongodb+srv://denys:qazwsx18@cluster0.tikwgdm.mongodb.net/test?retryWrites=true&w=majority
+MONGO = ''
 
 
-NEXTAUTH_SECRET='digjaewjfewahgoaigh'
+NEXTAUTH_SECRET=''
 NEXTAUTH_URL='http://localhost:3000'
